Ran into a issue where thier is a small white space on the right side of all formats

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,10 +33,14 @@ html {
 
 .video-container {
     position: absolute;
-    top: 0;
-    left: 0;
+    
     width: 100%;
 }
+.video-container video {
+    min-width: 100%; 
+  min-height: 100%; 
+}
+
 
 .direction_btn {
     z-index: 1;
@@ -200,7 +204,7 @@ text-align: center;
 }
 
 li {
-    font-size: 25px;
+    font-size: 20px;
     font-family: "Luckiest Guy", cursive;
     color: #fff;
     text-shadow: 2px 2px #663399;
@@ -259,6 +263,7 @@ li {
 
 @media (max-width: 600px) {
 
+
     .page-title {
         display: none;
         font-family: "Luckiest Guy", cursive;
@@ -270,6 +275,16 @@ li {
         padding-top: 150px;
     }
 
+    .card-settings {
+    z-index: 1;
+    background-color: gray;
+    opacity: .8;
+    margin: 0 auto;
+    padding-left: 20px;
+    padding-right: 20px;
+    width: 100%;
+    height: 100vh;
+}
     .section {
         height: 100vh;
         width: 100%;
